# cursor-highlighter-public

./: README.md  pyproject.toml
.github/: FUNDING.yml
kwin/: cursor_bridge.js
packaging/: cursor-highlighter.desktop
scripts/: install.sh
src/cursor_highlighter/: app.py
src/cursor_highlighter/config/: i18n.py  settings_window.py  store.py  theme.py
src/cursor_highlighter/input/: device_discovery.py  evdev_reader.py
src/cursor_highlighter/kwin_bridge/: client.py  dbus_service.py  loader.py
src/cursor_highlighter/overlay/: cursor_state.py  engine.py
src/cursor_highlighter/overlay/qml/: CursorHighlight.qml
src/cursor_highlighter/tray/: icon.py
