[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cursor-highlighter"
version = "0.1.0"
description = "Resalta el cursor y anima los clicks en KDE Plasma Wayland"
requires-python = ">=3.10"
dependencies = [
    "PyQt6",
    "evdev",
]

[project.scripts]
cursor-highlighter = "cursor_highlighter.app:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"cursor_highlighter.overlay" = ["qml/*.qml"]
